fixed clicking on tasks entrys

--- a/static/css/start.css
+++ b/static/css/start.css
@@ -280,6 +280,9 @@ form .entry {
   margin: 20px 0px;
   cursor: pointer;
 }
+button {
+  cursor: pointer;
+}
 
 form .entry * {
   cursor: pointer;
