--- a/templates/index.html
+++ b/templates/index.html
@@ -7,20 +7,22 @@
     {%if tasks %}
     <div class="left-align"> <h1 >Your current Tasks: </h1></div>
     {% for task in tasks %}
-    <form method="GET" action="/tasks/edit" style="width: 100%" id="{{task.id}}">
         <a class="entry entry3" onClick="document.getElementById('{{task.id}}').submit();">
-            <div class="align-content-left">
-                    <input type="hidden" value={{task.id}} name="id">
-                    <button class="btn-text margin-lr underline" type="submit">{{task.name}}</button>
-        
-            </div>
-            <div class="info-container">   
-                       
-                <p class="underline ">Categorie: {{task.categorie}}</p>
-                <p class="underline " style="text-align: left;">Due: {{task.due}}</p>
-            </div>
+                <div>
+                    <form method="GET" action="/tasks/edit" style="width: 100%" id="{{task.id}}" class="align-content-left">
+                        <input type="hidden" value={{task.id}} name="id">
+                        <button class="btn-text margin-lr underline" type="submit">{{task.name}}</button>
+                    </form>
+                </div>
+                <div>   
+                    <form method="GET" action="/tasks/edit" style="width: 100%" id="{{task.id}}" class="info-container">
+                        <input type="hidden" value={{task.id}} name="id">
+                        <button class="underline btn-text" type="submit">Categorie: {{task.categorie}}</p>
+                        <button class="underline btn-text" style="text-align: left;" type="submit">Due: {{task.due}}</p>
+                    </form> 
+                </div>
+            
             <div class="container-horizontal align-content-right">
-               
                 <form method="POST" action="/tasks">
                     <input type="hidden" value={{task.id}} name="id">
                     <button class="btn-text margin-lr check" type="submit" >✓</button>
