made it possible to edit the categorie of the task

--- a/templates/tasks/edit.html
+++ b/templates/tasks/edit.html
@@ -19,6 +19,15 @@
         <div class="textfield">
             <input type="hidden" name="id" value={{task.id}}>
         </div>
+        <div class="container-horizontal half-size">
+            <label for="categorie" >Categorie:</label>
+            <select name="categorie" id="categorie" required>
+                <option  value="work" >Work</option>
+                <option value="daily" >Daily Stuff</option>
+                <option value="health" >Health</option>
+                <option value="education" >Education</option>
+            </select> 
+        </div>
         <button class="btn-primary" id="login-btn" type="submit"><p class="underline" >Edit Task</p></button>
     </form>
 {% endblock %}
