fixed missing input field

--- a/templates/friends/searchResults.html
+++ b/templates/friends/searchResults.html
@@ -17,6 +17,7 @@
         </form>
         <div class="align-content-right">
             <form action="/friends/add" method="GET" >
+                <input type="hidden" name="username" value="{{user.username}}" > 
                 <button type="submit" class="btn-text underline" >Hinzufügen</button>
             </form>
         </div>
