minor style changes

--- a/templates/profiles/profile.html
+++ b/templates/profiles/profile.html
@@ -12,7 +12,7 @@
     {% else %}
     <img class="profile-pic" src="../../static/images/416-4161690_empty-profile-picture-blank-avatar-image-circle.png" alt="picture">
     {% endif %}
-    <p class="btn-font">Score: {{score}}</p>
+    <p class="big-font">Score: {{score}}</p>
 
 
     <div class="score-stats-container">
@@ -99,4 +99,5 @@
         <button type="submit" class="btn-primary half-size" ><p class="underline" >Send friend requests</p></button>
     </form>
     {% endif %}
+    <div class="margin"></div>
 {% endblock %}
