fixed the design of the footer

--- a/templates/template.html
+++ b/templates/template.html
@@ -28,7 +28,6 @@
                     <a class="li" href="/friends"><p>Friends</p></a>
                     <a class="li" href="/challenges"><p>Challenges</p></a>
                     <a class="li" href="/profile"><p>Profile</p></a>
-                    <a class="li" href="/scoreboard/monthly"><p>Scoreboard</p></a>
                 </div>
                 
                 <div class="line"></div>
@@ -40,9 +39,9 @@
         
 
     </body>
+    <div class="line"></div>
     <footer>
-        <div class="line"></div>
-        <a class="btn-text" href="/logout">Logout</a> 
+        <a class="btn-text" href="/logout"><p class="underline primary-color">Logout</p></a> 
     </footer>
 
     <script>
