--- a/static/css/start.css
+++ b/static/css/start.css
@@ -10,7 +10,7 @@
   --clr-entry: #b6174b;
   --clr-entry-border: #b6174b;
   --clr-background: #00e0d1;
-  --clr-footer: #b6174b;
+  --clr-footer: #b6174cde;
   --clr-header-font: #b6174b;
 
   --font: "Poppins";
@@ -683,6 +683,7 @@ View Compiled .half-size {
   background-color: var(--clr-header-font);
   height: 3px;
   width: 100%;
+  margin-top: 20px;
 }
 
 .bar {
@@ -702,13 +703,18 @@ header nav a.icon :after {
 }
 
 footer {
+  padding-top: 10px;
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  background-color: var(--clr-footer);
-  padding-bottom: 200px;
+  background-color: var(--clr-background);
+  padding-bottom: 10px;
+}
+
+footer .btn-text {
+  color: var(--clr-header-font);
 }
 
 @media (max-width: 1100px) {
