--- a/templates/challenges/overview.html
+++ b/templates/challenges/overview.html
@@ -25,7 +25,7 @@
             <p class="underline">Score: {{first_score}} : {{second_score}}</p>
         </div>
         <div class="container-horizontal align-content-right">
-            <p class="margin-lr">Expires: {{date}}</p>
+            <p class="margin-lr">{{date}}</p>
                 <input type="hidden" name="challenge_id" value={{id}}>
                 <button type="submit"  class="btn-text underline">Details</button>
         </div>
