--- a/templates/friends/friends.html
+++ b/templates/friends/friends.html
@@ -28,11 +28,11 @@
         <div class="container-horiontal align-content-right">
             <form method="GET" action="/profile">
                 <input type="hidden" name="username" value="{{username}}" >
-                <button class="btn-text margin-lr underline" type="submit">View his profile</button>
+                <button class="btn-text margin-lr underline" type="submit">Profile</button>
             </form>
             <form method="GET" action="/friends/teamUp">
                 <input type="hidden" name="username_friend" value="{{username}}" >
-                <button type="submit" class="btn-text underline">View his tasks</button>
+                <button type="submit" class="btn-text underline">Tasks</button>
             </form>
         </div>
     </div>
