--- a/templates/tasks/edit.html
+++ b/templates/tasks/edit.html
@@ -19,7 +19,7 @@
         <div class="textfield">
             <input type="hidden" name="id" value={{task.id}}>
         </div>
-        <div class="container-horizontal half-size">
+        <div class="container-horizontal textfield" id="form-container-horizontal">
             <label for="categorie" >Categorie:</label>
             <select name="categorie" id="categorie" required>
                 <option  value="work" >Work</option>
