--- a/static/css/start.css
+++ b/static/css/start.css
@@ -123,7 +123,7 @@ header nav p:hover:after {
 
 .score-stats-container {
   height: 400px;
-  width: 50%;
+  width: 70%;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -138,7 +138,7 @@ header nav p:hover:after {
 .score-bar {
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
-  width: 4vw;
+  width: 6vw;
   height: 100%;
   background-color: blue;
   margin-left: 10px;
@@ -158,7 +158,7 @@ header nav p:hover:after {
 .stats-label-container {
   display: flex;
   flex-direction: row;
-  width: 50%;
+  width: 70%;
   justify-content: center;
 }
 
@@ -323,6 +323,11 @@ form .entry * {
   box-shadow: 3px 3px 2px rgba(0, 0, 0, 0.2);
 }
 
+.entry div {
+  display: flex;
+  align-items: center;
+}
+
 .entry-container:hover .entry {
   transition: left 50ms, top 50ms, box-shadow 50ms;
 }
@@ -367,6 +372,10 @@ form .entry * {
   display: flex;
   flex-direction: row;
   align-items: center;
+}
+
+#form-container-horizontal {
+  justify-content: space-between;
 }
 
 .left-align {
@@ -689,7 +698,7 @@ View Compiled .half-size {
 .bar {
   width: 35px;
   height: 5px;
-  background-color: black;
+  background-color: var(--clr-btn-primary);
   margin: 6px 0;
 }
 
@@ -718,7 +727,14 @@ footer .btn-text {
 }
 
 @media (max-width: 1100px) {
-  .topnav div a {
+  .textfield {
+    width: 80%;
+  }
+
+  form select {
+    width: 60%;
+  }
+  .topnav div a.li {
     display: none;
   }
   .topnav a.icon {
@@ -734,7 +750,7 @@ footer .btn-text {
     justify-content: flex-start;
     margin-bottom: 20px;
   }
-  .topnav.responsive a {
+  .topnav.responsive a.li {
     float: none;
     display: block;
     text-align: left;
