--- a/templates/tasks/add.html
+++ b/templates/tasks/add.html
@@ -19,7 +19,7 @@
             <input type="date" name="due" placeholder="Fälligkeitsdatum" required>
         </div>
 
-        <div class="container-horizontal half-size">
+        <div class="container-horizontal textfield" id="form-container-horizontal">
             <label for="categorie" >Categorie:</label>
             <select name="categorie" id="categorie" required>
                 <option  value="work" >Work</option>
