--- a/templates/loginTemplate.html
+++ b/templates/loginTemplate.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="../static/css/start.css">
         <link href="../static/growth.png" rel="icon">
     </header>
-    <body>
+    <body class="spacer">
         <h1 class="extra-big-font">EXAC</h1>
         {% block main %} {% endblock %}
     </body>
