--- a/templates/tasks/add.html
+++ b/templates/tasks/add.html
@@ -28,6 +28,15 @@
                 <option value="education" >Education</option>
             </select> 
         </div>
+        <div class="container-horizontal textfield" id="form-container-horizontal">
+            <label for="categorie" >Priorität:</label>
+            <select name="priorität" id="priority" required>
+                <option  value="1" >1</option>
+                <option value="2" >2</option>
+                <option value="3" >3</option>
+                <option value="4" >4</option>
+            </select> 
+        </div>
         <button class="btn-primary" id="task-btn" type="submit"><p class="underline" >Add Task</p></button>
     </form>
 {% endblock %}
