--- a/templates/tasks/edit.html
+++ b/templates/tasks/edit.html
@@ -30,7 +30,7 @@
         </div>
         <div class="container-horizontal textfield" id="form-container-horizontal">
             <label for="categorie" >Priorität:</label>
-            <select name="priorität" id="priority" required>
+            <select name="priority" id="priority" required>
                 <option  value="1" >1</option>
                 <option value="2" >2</option>
                 <option value="3" >3</option>
