made it possible to show the tasks

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,6 +18,7 @@
                     <form method="GET" action="/tasks/edit" style="width: 100%" id="{{task.id}}" class="info-container">
                         <input type="hidden" value={{task.id}} name="id">
                         <button class="underline btn-text" type="submit">{{task.categorie}}</p>
+                        <button class="underline btn-text" type="submit">Priorität {{task.priority}}</p>
                         <button class="underline btn-text" style="text-align: left;" type="submit">{{task.due}}</p>
                     </form> 
                 </div>
