--- a/templates/tasks/tasks.html
+++ b/templates/tasks/tasks.html
@@ -20,9 +20,9 @@
                     </div>
                     <input type="hidden" value={{task.id}} name="id">
                 </form>
-                <!-- Currently it is possible that there is no due date -->
                 <div class="info-container">   
                     <p class="underline ">{{task.categorie}}</p>
+                    <button class="underline btn-text" type="submit">Priorität {{task.priority}}</button>
                     <p class="underline " style="text-align: left;">{{task.due}}</p>
                 </div>
                 <div class="container-horizontal align-content-right">
